--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -1,13 +1,24 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
     
 }
 header {
@@ -16,14 +27,16 @@ header {
     text-align: center;
 }
 
-header > p {
-    padding-bottom: 50px;
-}
-
-h1 {
+header h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 8vw;
+    
+}
 
+header > p {
+    padding-bottom: 50px;
 }
 
 a {
@@ -41,8 +54,13 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
+section > p {
+    padding-bottom: 1.6em;
+}
 section.normal{
     background-color: white;
     color: black;
@@ -51,11 +69,26 @@ section.normal{
 section.imagem {
     background-color: rgba(0, 0, 0, 0.604);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px black;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
     background-color: rgba(0, 0, 0, 0.407);
+    padding: 5px;
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.685);
+}
+
+section#img001 {
+    background-image: url('imagens/background001.jpg');
+    background-position: right center;
+
+}
+
+section#img002 {
+    background-image: url('imagens/background002.jpg');
 }
 
 footer {
@@ -63,11 +96,4 @@ footer {
     color: white;
     text-align: center;
     padding: 10px;
-}
-
-
-
-
-p {
-
 }
